# Inside of setup.cfg
[metadata]
name = libreria_python_the_bridge # Cambiar por el nombre de la libreria
version = 0.0.1
description = Hace cosas
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GonzaloPerez1/Libreria-python 
author = The bridge Data Science Full time Junio 2021
author_email = hola@hola.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
install_requires =
    # Añadir requerimientos: EG
    # numpy >= 1.18.0
python_requires = >=3.6
include_package_data = True
