# Inside of setup.cfg
[metadata]
name = broomlib
version = 0.1
description = Hace cosas
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GonzaloPerez1/broomlib 
author = The bridge Data Science Full time Junio 2021
author_email = gonzalo.perez.diez@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    # Requirements
    numpy >= 1.18.0
    pandas >= 1.2.4
    matplotlib >= 3.3.4
    seaborn >= 0.11.1
    scikit-learn >= 0.24.1
python_requires = >=3.6
include_package_data = True

[metedata]
keywords = data analysis, machine learning, missings cleaning, visualization 
