# Inside of setup.cfg

[metadata]
name = broomlib
version = 0.1
description = "Library with an educational purpose, developed by the Bridge Data Science JN-2021-FT Class
The main objective of this library is to help data scientists in their day-to-day work by developing functions that help them to be more efficient and productive
This library contains 3 main modules, data cleaning, machine learning, and visualization. and each module has functions that help with each task associate to the model"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GonzaloPerez1/broomlib 
author = The bridge Data Science Full time June 2021
author_email = ds-jun21@hello.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = data analysis, machine learning, missings cleaning, visualization

[options]
packages = find:
install_requires =
    # Requirements
    numpy >= 1.18.0
    pandas >= 1.2.4
    matplotlib >= 3.3.4
    seaborn >= 0.11.1
    scikit-learn >= 0.24.1
python_requires = >=3.6
include_package_data = True
 
